# deepset-mcp-server

./: .gitignore  Dockerfile  Makefile  README.md  REPO.md  TODO.md  check_imports.py  main.py  mkdocs.yml  pyproject.toml  test_main.py  test_runner.py  test_search_basic.py
.github/workflows/: ci.yml  docker_push.yml  publish_docs.yml  pypi_release.yml
data/raw/: metabase_pipeline_created_last_3_months_exported_30-05-2025.csv  metabase_pipeline_deployed_last_3_months_exported_30-05-2025.csv
docs/: api_sdk.md  index.md  reference.md
docs/guides/: mcp_server.md
docs/reference/: mcp_reference.md
src/deepset_mcp/: __init__.py  client.py  config.py  implementation_plan.md  main.py  server.py  store.py  tool_factory.py  tool_models.py  tool_registry.py  transport.py
src/deepset_mcp/agents/debugging/: debugging_agent.py  system_prompt.md
src/deepset_mcp/agents/generalist/: generalist_agent.py  system_prompt.md
src/deepset_mcp/api/: README.md  client.py  exceptions.py  protocols.py  shared_models.py  transport.py
src/deepset_mcp/api/custom_components/: models.py  resource.py
src/deepset_mcp/api/haystack_service/: models.py  resource.py
src/deepset_mcp/api/indexes/: models.py  protocols.py  resource.py
src/deepset_mcp/api/integrations/: __init__.py  models.py
src/deepset_mcp/api/model/: __init__.py  models.py  protocols.py  resource.py
src/deepset_mcp/api/pipeline/: __init__.py  handle.py  log_models.py  models.py  protocols.py  resource.py
src/deepset_mcp/api/pipeline_template/: models.py  protocols.py  resource.py
src/deepset_mcp/api/search_history/: __init__.py  models.py  protocols.py  resource.py
src/deepset_mcp/api/secrets/: models.py  resource.py
src/deepset_mcp/api/user/: resource.py
src/deepset_mcp/api/workspace/: __init__.py  models.py  protocols.py  resource.py
src/deepset_mcp/benchmark/: README.md  __init__.py
src/deepset_mcp/benchmark/agent_configs/: debugging_agent.yml
src/deepset_mcp/benchmark/cli/: cli.py  repl.py  utils.py
src/deepset_mcp/benchmark/core/: TODO.md  agent_loader.py  config.py  exceptions.py  repository.py  services.py
src/deepset_mcp/benchmark/dp_validation_error_analysis/: eda.ipynb  prepare_interaction_data.ipynb
src/deepset_mcp/benchmark/executors/: agent_executor.py  benchmark_executor.py
src/deepset_mcp/benchmark/logging/: logging_config.py
src/deepset_mcp/dp_validation_error_analysis/: eda.ipynb  prepare_interaction_data.ipynb
src/deepset_mcp/mcp/: __init__.py  custom_components.py  indexes.py  pipeline_templates.py  pipelines.py  server.py  tool_factory.py  tool_models.py  tool_registry.py
src/deepset_mcp/prompts/: deepset_copilot_prompt.md  deepset_debugging_agent.md
src/deepset_mcp/skills/: custom_code.md
src/deepset_mcp/tokonomics/: __init__.py  decorators.py  explorer.py  object_store.py
src/deepset_mcp/tools/: __init__.py  component.py  component_helper.py  custom_components.py  doc_search.py  formatting_utils.py  formatting_utils_index.py  haystack_service.py  indexes.py  integrations.py  model.py  model_protocol.py  object_store.py  pipeline.py  pipeline_template.py  search_history.py  secrets.py  skills.py  workspace.py
test/: test_async_deepset_client.py  test_client.py  test_main.py
test/integration/: test_integration_haystack_service_resource.py  test_integration_index_resource.py  test_integration_indexes_resource.py  test_integration_integrations_resource.py  test_integration_model_resource.py  test_integration_pipeline_logs.py  test_integration_pipeline_resource.py  test_integration_pipeline_template_resource.py  test_integration_pipeline_validation.py  test_integration_search_history_resource.py  test_integration_secret_resource.py  test_integration_user_resource.py  test_integration_workspace_resource.py
test/integration/tokonomics/: test_integration_tokonomics.py
test/unit/: conftest.py  test_async_deepset_client.py  test_server_base_url.py  test_server_main_base_url.py  test_store.py  test_tool_factory.py
test/unit/benchmark/: __init__.py
test/unit/pipeline/: test_pipeline_resource.py  test_pipeline_validation.py
test/unit/tokonomics/: test_decorators.py  test_explorer.py
test/unit/tools/: test_component.py  test_component_helper.py  test_custom_components.py  test_doc_search.py  test_formatting_utils.py  test_haystack_service.py  test_indexes.py  test_integrations.py  test_model.py  test_object_store.py  test_pipeline.py  test_pipeline_logs.py  test_pipeline_template.py  test_search_history.py  test_secrets.py  test_skills.py  test_workspace.py
tests/unit/: conftest.py
(+59 files in other folders)
